# wappen-script

./: Cargo.toml
scripts/: loop.ws  script.ws
src/: main.rs  node.rs  parser.rs  runner.rs  token.rs  tokenizer.rs
src/runner/: context.rs  expression.rs  operator.rs  operators.rs  value.rs
src/runner/operator/: add.rs  and.rs  call.rs  condition.rs  deref.rs  divide.rs  equals.rs  function.rs  greater.rs  greater_equals.rs  include.rs  less.rs  less_equals.rs  multiply.rs  not.rs  not_equals.rs  or.rs  pointer.rs  set.rs  subtract.rs  syscall.rs
