[package]
name = "wappen-script"
version = "0.1.0"
edition = "2021"
authors = ["Wappen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10.0"
phf = { version = "0.11.1", features = ["macros"] }
clap = { version = "4.0.18", features = ["derive"] }
